finish second section

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,9 @@
             <div class="container container--view">
                 <p class="view__dest">WE ARE Atelier Creative Agency</p>
                 <h1 class="view__title">Unique UI Kit Template for Creative Agencies</h1>
-                <button class="view__button">VIEW LAYOUTS</button>
+                <a href="#" class="view__button">VIEW LAYOUTS</a>
             </div>
         </section>
+        @@include('./html/landing.html')
     </body>
 </html>
