finish thirth section

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -1,5 +1,5 @@
 <section class="landing">
-    <div class="container container--landing">
+    <div class="container container--section">
         <p class="landing__dest">Our Core Layouts</p>
         <h2 class="landing__title">Template Pages</h2>
         <div class="holder">
@@ -89,4 +89,5 @@
             </div>
         </div>
     </div>
+    <div class="landing__photo"><img src="@img/hero2.jpg" alt="science"></div>
 </section>
