--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,38 @@
             </div>
         </header>
         <section class="view">
-            <div class="container container--view">
+            <div class="container container--section">
                 <p class="view__dest">WE ARE Atelier Creative Agency</p>
-                <h1 class="view__title">Unique UI Kit Template for Creative Agencies</h1>
+                <h2 class="view__title">Unique UI Kit Template for Creative Agencies</h2>
                 <a href="#" class="view__button">VIEW LAYOUTS</a>
             </div>
         </section>
         @@include('./html/landing.html')
+        <section class="services">
+            <div class="container container--section">
+                <p class="services__dest">Our Core Features</p>
+                <h2 class="services__title">Our Services</h2>
+                <div class="holder holder--services">
+                    <div class="holder__card">
+                        <div class="holder__icon"><img src="@img/icons/web.svg" alt="web"></div>
+                        <h3>Web Design</h3>
+                        <h4>Suspendisse varius enim in</h4>
+                        <p>cursus id rutrum imperdiet. eros elementum tristique.</p>
+                    </div>
+                    <div class="holder__card">
+                        <div class="holder__icon"><img src="@img/icons/design.svg" alt="design"></div>
+                        <h3>UI/UX Design</h3>
+                        <h4>Suspendisse varius enim in</h4>
+                        <p>cursus id rutrum imperdiet. eros elementum tristique.</p>
+                    </div>
+                    <div class="holder__card">
+                        <div class="holder__icon"><img src="@img/icons/marketing.svg" alt="marketing"></div>
+                        <h3>SEO & Marketing</h3>
+                        <h4>Suspendisse varius enim in</h4>
+                        <p>cursus id rutrum imperdiet. eros elementum tristique.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
